wall generation formula

--- a/MR_pseudo_asynchron/pseudo_asynchron.ipynb
+++ b/MR_pseudo_asynchron/pseudo_asynchron.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import robotic as ry\n",
     "import numpy as np\n",
     "import time\n",
-    "\n",
+    "from math import sqrt, atan, pi\n",
     "\n",
     "C = ry.Config()\n",
     "C.addFile(\"cross_map.g\")\n",
@@ -25,9 +25,6 @@
     "m_objects = [m1, m2]\n",
     "goals = [g1, g2]\n",
     "\n",
-    "xy_dim = np.array([[1, 0, 0], [0, 1, 0]])\n",
-    "\n",
-    "\n",
     "def komo_solver(robots, m_objects, goals):\n",
     "    \n",
     "    if not isinstance(robots, list):\n",
@@ -37,7 +34,8 @@
     "    if not isinstance(goals, list):\n",
     "        goals = [goals]\n",
     "    \n",
-    "    komo = ry.KOMO(C, phases=2, slicesPerPhase=10, kOrder=2, enableCollisions=True)  \n",
+    "    komo = ry.KOMO(C, phases=2, slicesPerPhase=20, kOrder=2, enableCollisions=True)  \n",
+    "    komo.updateRootObjects(C)\n",
     "    komo.addControlObjective([], 0)\n",
     "    komo.addControlObjective([], 2)\n",
     "    \n",
@@ -55,17 +53,31 @@
     "\n",
     "def collisions(config, path):\n",
     "    \n",
+    "    intial_state = C.getFrameState()\n",
+    "    \n",
+    "    res = []\n",
+    "    \n",
     "    counter = 0\n",
+    "    \n",
+    "    \n",
     "    for state in path:\n",
-    "        if counter == 10:\n",
-    "            config.attach(m1, r1)\n",
+    "        if counter == 20:\n",
+    "            config.attach(r1, m1)\n",
+    "            config.attach(r2, m2)\n",
     "        config.setJointState(state)\n",
-    "        config.view()\n",
     "        config.computeCollisions()\n",
     "        y, j = config.eval(ry.FS.accumulatedCollisions)\n",
-    "        print(y)\n",
+    "        if y > 0:\n",
+    "            res.append(counter)\n",
     "        counter += 1\n",
-    "        #time.sleep(1)\n",
+    "    \n",
+    "  \n",
+    "        \n",
+    "    C.setFrameState(intial_state)\n",
+    "    C.getFrame(m1).unLink()\n",
+    "    C.getFrame(m2).unLink()\n",
+    "    \n",
+    "    return res\n",
     "        "
    ]
   },
@@ -73,87 +85,108 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Both objects simultaneously\n",
-      "eq: 0.03090137447258578\n",
-      "Sos: 510.618475101836\n",
-      "isFeasible: True\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "[0.]\n",
-      "STACK9 /bin/python3(_PyEval_EvalFrameDefault\n",
-      "STACK8 /bin/python3(_PyFunction_Vectorcall\n",
-      "STACK7 /bin/python3(_PyEval_EvalFrameDefault\n",
-      "STACK6 /bin/python3(+0x198a6b) [0x558f126faa6b]\n",
-      "STACK5 /bin/python3(_PyObject_MakeTpCall\n",
-      "STACK4 /bin/python3(+0x18ae12) [0x558f126ece12]\n",
-      "STACK3 /home/alperen/.local/lib/python3.10/site-packages/robotic/_robotic.so(+0x3f21e) [0x7fb43462021e]\n",
-      "STACK2 /home/alperen/.local/lib/python3.10/site-packages/robotic/_robotic.so(+0x81a3d) [0x7fb434662a3d]\n",
-      "STACK1 rai::Configuration::setJointState(rai::ArrayDouble const&)\n",
-      "STACK0 rai::LogToken::~LogToken()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "== ERROR:kin.cpp:setJointState:675(-2) CHECK_EQ failed: '_q.N'=6 'N'=3 -- wrong joint state dimensionalities\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "kin.cpp:setJointState:675(-2) CHECK_EQ failed: '_q.N'=6 'N'=3 -- wrong joint state dimensionalities",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ret_both\u001b[38;5;241m.\u001b[39mfeasible \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     path \u001b[38;5;241m=\u001b[39m komo_both\u001b[38;5;241m.\u001b[39mgetPath()    \n\u001b[0;32m---> 13\u001b[0m     \u001b[43mcollisions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[1], line 54\u001b[0m, in \u001b[0;36mcollisions\u001b[0;34m(config, path)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m counter \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[1;32m     53\u001b[0m     config\u001b[38;5;241m.\u001b[39mattach(m1, r1)\n\u001b[0;32m---> 54\u001b[0m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetJointState\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     55\u001b[0m config\u001b[38;5;241m.\u001b[39mview()\n\u001b[1;32m     56\u001b[0m config\u001b[38;5;241m.\u001b[39mcomputeCollisions()\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: kin.cpp:setJointState:675(-2) CHECK_EQ failed: '_q.N'=6 'N'=3 -- wrong joint state dimensionalities"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# try to solve situation for both case \n",
-    "#komo_both, ret_both = komo_solver(robots, m_objects, goals)\n",
-    "komo_both, ret_both = komo_solver(r1, m_objects, goals)\n",
+    "def distance(state1, state2):\n",
+    "    return sqrt((abs(state1[0] - state2[0]) ** 2 + abs(state1[1] - state2[1]) ** 2))\n",
+    "    \n",
+    "\n",
+    "def determine_wall(path_both, collision_states, second_robot_state):\n",
     "\n",
     "\n",
-    "print(f\"Both objects simultaneously\\neq: {ret_both.eq}\\nSos: {ret_both.sos}\\nisFeasible: {ret_both.feasible}\")\n",
+    "    start_state = path_both[collision_states[0]][:3]\n",
+    "    finish_state = path_both[collision_states[-1]][:3]\n",
+    "    \n",
+    "    \n",
+    "    len_wall = distance(start_state, finish_state) * 3\n",
+    "        \n",
+    "    min_dist_state = start_state\n",
+    "    min_distance = float(\"inf\")\n",
+    "    \n",
+    "    for i in collision_states:\n",
+    "        curr_dist = distance(path_both[i][:3], second_robot_state)\n",
+    "        if  curr_dist < min_distance:\n",
+    "            min_distance = curr_dist\n",
+    "            min_dist_state = path_both[i][:3]\n",
+    "    \n",
+    "    \n",
+    "    min_dist_state[0] -= 0.2\n",
+    "    min_dist_state[1] -= 0.2\n",
+    "    \n",
+    "    reverse_slope = -1 * (abs(second_robot_state[0] - min_dist_state[0]) / abs(second_robot_state[1] - min_dist_state[1]))\n",
+    "    \n",
+    "    rotation_in_radian = pi/2 - atan(reverse_slope)\n",
+    "    \n",
+    "    min_dist_state[2] = -(rotation_in_radian)\n",
+    "    \n",
+    "    return (min_dist_state, len_wall)        \n",
+    "        \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "if ret_both.feasible == True:\n",
-    "    path = komo_both.getPath()    \n",
-    "    collisions(C, path)\n",
     "    \n",
     "    \n",
     "    \n",
-    "else:\n",
-    "    pass\n",
     "    \n",
-    "\n"
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying to solve for both objects\n",
+      "eq: 2.598975159189436\n",
+      "Sos: 1607.3076800259737\n",
+      "isFeasible: False\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "True 0.055222915847488736 809.7513290364739\n"
+     ]
+    }
+   ],
    "source": [
-    "komo_both.view_play()"
+    "# try to solve situation for both case \n",
+    "komo_both, ret_both = komo_solver(robots, m_objects, goals)\n",
+    "print(f\"Trying to solve for both objects\\neq: {ret_both.eq}\\nSos: {ret_both.sos}\\nisFeasible: {ret_both.feasible}\\n\\n\\n\\n\")\n",
+    "\n",
+    "\n",
+    "if ret_both.feasible:\n",
+    "    komo_both.view_play()\n",
+    "\n",
+    "else:\n",
+    "    path = komo_both.getPath()\n",
+    "    \n",
+    "    collision_states = collisions(C, path)\n",
+    "        \n",
+    "    wall_state, wall_len = determine_wall(path, collision_states, C.getFrame(r2).getJointState())\n",
+    "    \n",
+    "    C.addFrame(\"wall\", \"world\").setShape(ry.ST.ssBox, [0.001, wall_len, 0.7, 0]).setContact(1).setJoint(ry.JT.transXYPhi).setJointState(wall_state)\n",
+    "    wall_final_state = C.getFrame(\"wall\").getJointState()\n",
+    "    wall_final_lenght = C.getFrame(\"wall\").getSize()\n",
+    "    #print(wall_final_lenght, wall_final_state)\n",
+    "    C.getFrame(\"wall\").unLink()\n",
+    "    \n",
+    "    C.getFrame(r2).setJointState(komo_both.getPath()[31][3, 6])\n",
+    "    \n",
+    "    C.view()\n",
+    "    \n",
+    "    komo_solo, ret_solo = komo_solver(r2, m2, g2)\n",
+    "    \n",
+    "    komo_solo.view_play()\n",
+    "    \n",
+    "    print(ret_solo.feasible, ret_solo.eq, ret_solo.sos)\n",
+    "    \n",
+    "    \n",
+    "\n"
    ]
   }
  ],
