wall is now generated succesfuuly however komo does not include collisions wiht that wall

--- a/MR_pseudo_asynchron/pseudo_asynchron.ipynb
+++ b/MR_pseudo_asynchron/pseudo_asynchron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
     "            min_dist_state = path_both[i][:3]\n",
     "    \n",
     "    \n",
-    "    min_dist_state[0] -= 0.2\n",
-    "    min_dist_state[1] -= 0.2\n",
+    "    min_dist_state[0] -= 0.3\n",
+    "    min_dist_state[1] += 0.3\n",
     "    \n",
     "    reverse_slope = -1 * (abs(second_robot_state[0] - min_dist_state[0]) / abs(second_robot_state[1] - min_dist_state[1]))\n",
     "    \n",
@@ -170,12 +170,7 @@
     "    wall_state, wall_len = determine_wall(path, collision_states, C.getFrame(r2).getJointState())\n",
     "    \n",
     "    C.addFrame(\"wall\", \"world\").setShape(ry.ST.ssBox, [0.001, wall_len, 0.7, 0]).setContact(1).setJoint(ry.JT.transXYPhi).setJointState(wall_state)\n",
-    "    wall_final_state = C.getFrame(\"wall\").getJointState()\n",
-    "    wall_final_lenght = C.getFrame(\"wall\").getSize()\n",
-    "    #print(wall_final_lenght, wall_final_state)\n",
     "    C.getFrame(\"wall\").unLink()\n",
-    "    \n",
-    "    C.getFrame(r2).setJointState(komo_both.getPath()[31][3, 6])\n",
     "    \n",
     "    C.view()\n",
     "    \n",
