as an alternative way, rrt is added

--- a/MR_pseudo_asynchron/pseudo_asynchron.ipynb
+++ b/MR_pseudo_asynchron/pseudo_asynchron.ipynb
@@ -122,6 +122,30 @@
     "    return (min_dist_state, len_wall)        \n",
     "        \n",
     "\n",
+    "def show_solution(solution):\n",
+    "    \n",
+    "    C.view()\n",
+    "    time.sleep(10)\n",
+    "    \n",
+    "    ii = C.getFrameState()\n",
+    "\n",
+    "    for s in solution[:20]:\n",
+    "        C.setJointState(s)\n",
+    "        C.view()\n",
+    "        time.sleep(0.1)\n",
+    "\n",
+    "    C.attach(r1, m1)\n",
+    "    C.attach(r2, m2)\n",
+    "\n",
+    "    for s in solution[20:]:\n",
+    "        C.setJointState(s)\n",
+    "        C.view()\n",
+    "        time.sleep(0.1)\n",
+    "        \n",
+    "    C.getFrame(m1).unLink()\n",
+    "    C.getFrame(m2).unLink()\n",
+    "\n",
+    "    C.setFrameState(ii)    \n",
     "    \n",
     "    \n",
     "    \n",
@@ -134,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +173,9 @@
       "\n",
       "\n",
       "\n",
-      "True 0.055222915847488736 809.7513290364739\n"
+      "ret_solo_komo: True 0.055222915847488736 809.7513290364739\n",
+      "True\n",
+      "317\n"
      ]
     }
    ],
@@ -158,6 +184,7 @@
     "komo_both, ret_both = komo_solver(robots, m_objects, goals)\n",
     "print(f\"Trying to solve for both objects\\neq: {ret_both.eq}\\nSos: {ret_both.sos}\\nisFeasible: {ret_both.feasible}\\n\\n\\n\\n\")\n",
     "\n",
+    "solution = []\n",
     "\n",
     "if ret_both.feasible:\n",
     "    komo_both.view_play()\n",
@@ -169,19 +196,91 @@
     "        \n",
     "    wall_state, wall_len = determine_wall(path, collision_states, C.getFrame(r2).getJointState())\n",
     "    \n",
-    "    C.addFrame(\"wall\", \"world\").setShape(ry.ST.ssBox, [0.001, wall_len, 0.7, 0]).setContact(1).setJoint(ry.JT.transXYPhi).setJointState(wall_state)\n",
-    "    C.getFrame(\"wall\").unLink()\n",
+    "    C.addFrame(\"wall\", \"world\").setShape(ry.ST.box, [0.5, wall_len * 1.2, 0.7, 0]).setContact(1).setPose(f\"t({wall_state[0]} {wall_state[1]} 0) d({wall_state[2] * 180 / pi} 0 0 1)\")\n",
     "    \n",
     "    C.view()\n",
     "    \n",
     "    komo_solo, ret_solo = komo_solver(r2, m2, g2)\n",
+    "        \n",
+    "    print(\"ret_solo_komo:\", ret_solo.feasible, ret_solo.eq, ret_solo.sos)\n",
     "    \n",
-    "    komo_solo.view_play()\n",
+    "    if not ret_solo.feasible:\n",
+    "        komo_solo.view_play()\n",
+    "        print(\"solution found for solo\")\n",
+    "        \n",
     "    \n",
-    "    print(ret_solo.feasible, ret_solo.eq, ret_solo.sos)\n",
+    "    # trying rrt solution\n",
+    "    else:\n",
+    "        intial_position = C.getFrameState()\n",
+    "        C.setJointState(komo_solo.getPath()[20])\n",
+    "        C.attach(r2, m2)\n",
+    "        \n",
+    "        final_state = komo_solo.getPath()[-1]\n",
+    "        \n",
+    "        \n",
+    "        rrt = ry.PathFinder()\n",
+    "        rrt.setProblem(C, C.getJointState(), final_state)\n",
+    "        \n",
+    "        ret = rrt.solve()\n",
+    "        \n",
+    "        print(ret.feasible)\n",
+    "        \n",
+    "        C.getFrame(m2).unLink()\n",
+    "        \n",
+    "        C.setFrameState(intial_position)\n",
+    "        \n",
+    "        second_robot_path = []\n",
+    "        \n",
+    "        if ret.feasible:\n",
+    "            state_num = len(ret.x)\n",
+    "            print(state_num)\n",
+    "            counter = 0\n",
+    "            for i in range(0, state_num, 10):\n",
+    "                second_robot_path.append(ret.x[i])\n",
+    "            \n",
+    "        #print(\"second robot path\", second_robot_path, \"the len\", len(second_robot_path))\n",
+    "        \n",
+    "        #del second_robot_path[0]\n",
+    "        \n",
+    "        solution = komo_both.getPath()\n",
+    "        \n",
+    "        for i in range(20, 39):\n",
+    "            solution[i][3:] = second_robot_path[i - 20][3:]\n",
+    "        \n",
+    "        C.delFrame(\"wall\")\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "                \n",
+    "        \n",
+    "        \n",
     "    \n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "show_solution(solution)"
    ]
   }
  ],
