--- a/MR_pseudo_asynchron/pseudo_asynchron.ipynb
+++ b/MR_pseudo_asynchron/pseudo_asynchron.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import robotic as ry\n",
     "import numpy as np\n",
@@ -78,6 +89,8 @@
     "    C.getFrame(m2).unLink()\n",
     "    \n",
     "    return res\n",
+    "\n",
+    "C.view()\n",
     "        "
    ]
   },
@@ -158,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,13 +199,17 @@
     "\n",
     "solution = []\n",
     "\n",
+    "#komo_both.view_play()\n",
+    "\n",
     "if ret_both.feasible:\n",
     "    komo_both.view_play()\n",
     "\n",
     "else:\n",
+    "    \n",
     "    path = komo_both.getPath()\n",
     "    \n",
     "    collision_states = collisions(C, path)\n",
+    "    \n",
     "        \n",
     "    wall_state, wall_len = determine_wall(path, collision_states, C.getFrame(r2).getJointState())\n",
     "    \n",
@@ -200,6 +217,8 @@
     "    \n",
     "    C.view()\n",
     "    \n",
+    "    time.sleep(30)\n",
+    "        \n",
     "    komo_solo, ret_solo = komo_solver(r2, m2, g2)\n",
     "        \n",
     "    print(\"ret_solo_komo:\", ret_solo.feasible, ret_solo.eq, ret_solo.sos)\n",
@@ -275,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
