--- a/social_occ_solution/social_occ.ipynb
+++ b/social_occ_solution/social_occ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "25560485",
    "metadata": {},
    "outputs": [
@@ -12,16 +12,9 @@
        "0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NO SELECTION: SELECTION DEPTH = 1 200\n"
-     ]
     }
    ],
    "source": [
@@ -36,10 +29,10 @@
     "\n",
     "C = ry.Config()\n",
     "\n",
-    "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\"]\n",
+    "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\"]\n",
     "\n",
     "\n",
-    "C.addFile(f\"maps/{maps[2]}\")\n",
+    "C.addFile(f\"maps/{maps[4]}\")\n",
     "\n",
     "C.view()\n",
     "\n",
