after rrt solved everything ...

--- a/social_occ_solution/social_occ.ipynb
+++ b/social_occ_solution/social_occ.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "25560485",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import robotic as ry\n",
     "import numpy as np\n",
@@ -24,16 +13,243 @@
     "from time import sleep\n",
     "\n",
     "\n",
+    "r1 = \"r1\"\n",
+    "r2 = \"r2\"\n",
+    "m1 = \"m1\"\n",
+    "m2 = \"m2\"\n",
+    "g1 = \"g1\"\n",
+    "g2 = \"g2\"\n",
+    "\n",
+    "robots = [r1, r2]\n",
+    "m_objects = [m1, m2]\n",
+    "goals = [g1, g2]\n",
+    "\n",
+    "goals_reverse = [g2, g1]\n",
+    "\n",
+    "def komo_solver(robots, m_objects, goals):\n",
+    "    \n",
+    "    if not isinstance(robots, list):\n",
+    "        robots = [robots]\n",
+    "    if not isinstance(m_objects, list):\n",
+    "        m_objects = [m_objects]\n",
+    "    if not isinstance(goals, list):\n",
+    "        goals = [goals]\n",
+    "    \n",
+    "    komo = ry.KOMO(C, phases=2, slicesPerPhase=20, kOrder=2, enableCollisions=True)  \n",
+    "    komo.addControlObjective([], 0)\n",
+    "    komo.addControlObjective([], 2)\n",
+    "    \n",
+    "    komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq)     \n",
+    "    \n",
+    "    for i in range(len(robots)):\n",
+    "        komo.addObjective([1, -1], ry.FS.distance, [robots[i], m_objects[i]], ry.OT.eq) \n",
+    "        komo.addModeSwitch([1,-1], ry.SY.stable, [robots[i], m_objects[i]], True) \n",
+    "        komo.addObjective([2] , ry.FS.positionDiff, [m_objects[i], goals[i]], ry.OT.eq) \n",
+    "\n",
+    "    ret = ry.NLP_Solver(komo.nlp(), verbose=4).solve() \n",
+    "    \n",
+    "    return (komo, ret)\n",
+    "\n",
+    "def komo_onestate_hold(robot, m_object):\n",
+    "    komo = ry.KOMO(C, phases=1, slicesPerPhase=1, kOrder=0, enableCollisions=True)\n",
+    "    komo.addControlObjective([], 0)\n",
+    "    komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq) \n",
+    "    komo.addObjective([], ry.FS.distance, [robot, m_object], ry.OT.eq)\n",
+    "    \n",
+    "    ret = ry.NLP_Solver(komo.nlp(), verbose= 4).solve()\n",
+    "    return (komo, ret)\n",
     "\n",
     "\n",
+    "def komo_onestate_move(robot, m_object, goal):\n",
+    "    komo = ry.KOMO(C, phases=1, slicesPerPhase=1, kOrder= 1, enableCollisions=True)\n",
+    "    komo.addModeSwitch([0,1], ry.SY.stable, [robot, m_object], True) \n",
+    "    komo.addObjective([], ry.FS.distance, [robot, m_object], ry.OT.eq)\n",
+    "    komo.addObjective([1, 2] , ry.FS.positionDiff, [m_object, goal], ry.OT.eq) \n",
+    "    \n",
+    "    ret = ry.NLP_Solver(komo.nlp(), verbose= 4).solve()\n",
+    "    return (komo, ret)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "def rrt_solver(C, start_state, end_state, trial_count):\n",
+    "    rrt = ry.PathFinder()\n",
+    "    rrt.setProblem(C, start_state, end_state)\n",
+    "    \n",
+    "    ret = rrt.solve()\n",
+    "        \n",
+    "    for i in range(trial_count):\n",
+    "        if ret.feasible:\n",
+    "            return ret\n",
+    "        ret = rrt.solve() \n",
+    "        print(ret.feasible) \n",
+    "         \n",
+    "    \n",
+    "    return ret\n",
+    "\n",
+    "\n",
+    "def rrt_viewer(C, ret, attach_state = None, attach = False):\n",
+    "    \n",
+    "    sleep(1)\n",
+    "    if not ret.feasible:\n",
+    "        return\n",
+    "    \n",
+    "    path = ret.x\n",
+    "    \n",
+    "    initial_state = C.getFrameState()\n",
+    "    \n",
+    "    if attach:\n",
+    "        \n",
+    "        C.setJointState(attach_state)\n",
+    "        C.attach(r1, m1)\n",
+    "        C.attach(r2, m2)\n",
+    "    \n",
+    "    \n",
+    "    for i in path:\n",
+    "        C.setJointState(i)\n",
+    "        C.view()\n",
+    "        sleep(0.03)\n",
+    "    \n",
+    "    C.setFrameState(initial_state)\n",
+    "    \n",
+    "    if attach:\n",
+    "        C.getFrame(m1).unLink()\n",
+    "        C.getFrame(m2).unLink()\n",
+    "        \n",
+    "def path_viewer(C, path, attach_index1, attach_index2):\n",
+    "    \n",
+    "    initial_state = C.getFrameState()\n",
+    "    \n",
+    "    C.view()\n",
+    "\n",
+    "    sleep(2)\n",
+    "    \n",
+    "    for i in range(0, len(path)):\n",
+    "        \n",
+    "        \n",
+    "        C.setJointState(path[i])\n",
+    "        C.view()\n",
+    "        sleep(0.05)\n",
+    "        \n",
+    "        if i == attach_index1:\n",
+    "            C.attach(r1, m1)\n",
+    "        if i == attach_index2:\n",
+    "            C.attach(r2, m2)\n",
+    "            \n",
+    "    C.setFrameState(initial_state)\n",
+    "    \n",
+    "    C.getFrame(m1).unLink()\n",
+    "    C.getFrame(m2).unLink()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    \n",
+    "    \n",
     "\n",
     "C = ry.Config()\n",
     "\n",
     "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\"]\n",
     "\n",
-    "C.addFile(f\"maps/{maps[4]}\")\n",
+    "C.addFile(f\"maps/{maps[0]}\")\n",
     "C.view()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def path_mapper(path, final_size):\n",
+    "    original_path, hold_index = path\n",
+    "    original_path = np.array(original_path)\n",
+    "    path_len = len(original_path)\n",
+    "\n",
+    "    # Sample evenly spaced indices, reserving one for final state and one for hold\n",
+    "    steps_to_sample = final_size - 2  # 1 for hold, 1 for final\n",
+    "    sample_indices = np.linspace(0, path_len - 2, steps_to_sample).astype(int)\n",
+    "    sampled_path = original_path[sample_indices]\n",
+    "\n",
+    "    # Prepare hold and final states\n",
+    "    hold_state = original_path[hold_index].reshape(1, -1)\n",
+    "    final_state = original_path[-1].reshape(1, -1)\n",
+    "\n",
+    "    # Determine best insertion point for the hold state\n",
+    "    insert_pos = np.searchsorted(sample_indices, hold_index)\n",
+    "\n",
+    "    # Insert hold state at the right spot\n",
+    "    with_hold = np.insert(sampled_path, insert_pos, hold_state, axis=0)\n",
+    "\n",
+    "    # Append final state\n",
+    "    final_result = np.vstack([with_hold, final_state])\n",
+    "    return final_result, insert_pos\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a7966e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initial_state = C.getJointState()\n",
+    "\n",
+    "first_robot_hold, ret1 = komo_onestate_hold(r1, m1)  \n",
+    "second_robot_hold, ret2 = komo_onestate_hold(r2, m2) \n",
+    "\n",
+    "j1_hold = first_robot_hold.getPath()[0]  # birinci tobotun cargonun yanına geldiği state\n",
+    "j2_hold = second_robot_hold.getPath()[0]      # ikinci tobotun cargonun yanına geldiği state\n",
+    "\n",
+    "first_robot_move, ret1 = komo_onestate_move(r1, m1, g2)\n",
+    "second_robot_move, ret2 = komo_onestate_move(r2, m2, g1)\n",
+    "\n",
+    "j1_moved = first_robot_move.getPath()[0] # birinci robotun goal yanına geldiği state\n",
+    "j2_moved = second_robot_move.getPath()[0] # ikinci robotun goal yanına geldiği state\n",
+    "\n",
+    "#combined_hold = np.concatenate((j1_moved[:3], j2_moved[-3:]))\n",
+    "#C.setJointState(combined_hold)\n",
+    "#C.view()\n",
+    "\n",
+    "r1_hold_path = rrt_solver(C, initial_state, j1_hold, 3)\n",
+    "r1_move_path = rrt_solver(C, j1_hold, j1_moved, 3)\n",
+    "print((r1_hold_path.x), (r1_move_path.x))\n",
+    "r1_final = (np.array([i[0:3] for i in np.concatenate((r1_hold_path.x, r1_move_path.x))]), len(r1_hold_path.x))\n",
+    "\n",
+    "\n",
+    "r2_hold_path = rrt_solver(C, initial_state, j2_hold, 3)\n",
+    "r2_move_path = rrt_solver(C, j2_hold, j2_moved, 3)\n",
+    "r2_final = (np.array([k[3:] for k in np.concatenate((r2_hold_path.x, r2_move_path.x))]), len(r2_hold_path.x))\n",
+    "\n",
+    "r1_final = path_mapper(r1_final, 60)\n",
+    "r2_final = path_mapper(r2_final, 60)\n",
+    "\n",
+    "final_path = np.hstack((r1_final[0], r2_final[0]))\n",
+    "\n",
+    "path_viewer(C, final_path, r1_final[1], r2_final[1])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a368ee3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# heuristic one -- checking for any collision\n",
     "\n",
     "\n"
    ]
